--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
- 	<%= render 'layouts/navbar' %>
-	<%= yield %>
+	<div class="container" "container-fluid">
+ 		<%= render 'layouts/navbar' %>
+		<%= yield %>
+	</div>
 
 </body>
 </html>
